<resources>
    <string name="app_name">Lab3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="species">Species:</string>
    <string name="house">House:</string>
    <string name="gender">Gender:</string>
    <string name="image">Image:</string>
    <string name="imageDescription">imageDescription</string>
</resources>