<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="56dp">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/manaCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rarityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="36sp"
        android:textStyle="bold" />



</LinearLayout>
